@@ -48,6 +48,10 @@ Alternate name of the output file.
 .B -q, --quiet
 Suppress anything sent to standard output.
 .TP
+.B -r, --use-shared
+Attempt to relocate unshared data sections to shared memory if relocation
+fails.
+.TP
 .B -s FILE, --script FILE
 Linker script.
 .TP
